package org.example.polimorfismo_empresa;

public class Disenyador extends Empleado{

    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos.");
    }

}
